--- a/src/components/layout/Navbar/Navbar.module.css
+++ b/src/components/layout/Navbar/Navbar.module.css
@@ -1,12 +1,3 @@
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem 0;
-  background: transparent;
-  flex-shrink: 0;
-}
-
 .logoArea {
   display: flex;
   align-items: center;
@@ -54,4 +45,14 @@
     width: 28px;
     height: 28px;
   }
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
+  height: 70px;
+  flex-shrink: 0;
+  margin-top: -2rem;
 }
