--- a/src/components/ui/Logo/Logo.module.css
+++ b/src/components/ui/Logo/Logo.module.css
@@ -10,12 +10,3 @@
   font-weight: 900;
   letter-spacing: 2px;
 }
-
-/* .logoSvg circle,
-.logoSvg line {
-  stroke: var(--color-accent);
-}
-
-.logoSvg .dot {
-  fill: var(--color-accent);
-} */
